--- a/templates/minbot23.html
+++ b/templates/minbot23.html
@@ -24,7 +24,7 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         </div>
     </div>
-    <script src="{{url_for('static', filename='script33.css')}}"></script>
+    <script src="{{url_for('static', filename='script33.js')}}"></script>
 </body>
 
 </html>
